--- a/media-queries.html
+++ b/media-queries.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
+
     <title>Media Queries</title>
+    <link rel="stylesheet" href="css/media-queries.css">
 </head>
 <body>
     <div class="alert-info hidden-on-desktop">
